tests/invalid/math_exp_wrong_arg_count/main.py
import math

if __name__ == "__main__":
    x: float = math.exp(1.0, 2.0)
